--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <section id="about">
         <h2>Over Mij</h2>
-        <p>Hallo! Mijn naam is [Jouw Naam]. Ik ben een [student/ontwikkelaar] met een passie voor technologie en innovatie. Hier vind je meer over mijn professionele en persoonlijke interesses.</p>
+        <p>Hallo! Mijn naam is Tim Vanberghen. Ik ben een student met een passie voor technologie en innovatie. Hier vind je meer over mijn professionele en persoonlijke interesses.</p>
     </section>
 
     <section id="skills">
@@ -92,7 +92,7 @@
         <h2>Contact</h2>
         <p>Wil je met mij in contact komen? Hier zijn mijn gegevens:</p>
         <ul>
-            <li>Email: <a href="mailto:jouwemail@example.com">jouwemail@example.com</a></li>
+            <li>Email: <a href="mailto:timvanberghen@hotmail.com">jouwemail@example.com</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/jouwprofiel" target="_blank">Mijn LinkedIn</a></li>
             <li>GitHub: <a href="https://github.com/jouwgithub" target="_blank">Mijn GitHub</a></li>
         </ul>
