--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <p>Wil je met mij in contact komen? Hier zijn mijn gegevens:</p>
         <ul>
             <li>Email: <a href="mailto:timvanberghen@hotmail.com">jouwemail@example.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/jouwprofiel" target="_blank">Mijn LinkedIn</a></li>
-            <li>GitHub: <a href="https://github.com/jouwgithub" target="_blank">Mijn GitHub</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/tim-vanberghen-409002226/" target="_blank">Mijn LinkedIn</a></li>
+            <li>GitHub: <a href="https://github.com/r0345938" target="_blank">Mijn GitHub</a></li>
         </ul>
     </section>
 
