--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2>Contact</h2>
         <p>Wil je met mij in contact komen? Hier zijn mijn gegevens:</p>
         <ul>
-            <li>Email: <a href="mailto:timvanberghen@hotmail.com">jouwemail@example.com</a></li>
+            <li>Email: <a href="mailto:timvanberghen@hotmail.com">timvanberghen@hotmail.com</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/tim-vanberghen-409002226/" target="_blank">Mijn LinkedIn</a></li>
             <li>GitHub: <a href="https://github.com/r0345938" target="_blank">Mijn GitHub</a></li>
         </ul>
