--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section id="about">
         <h2>Over Mij</h2>
         <div class="photo-container">
-            <img src="profile-photo.png" alt="Foto van Tim Vanberghen">
+            <img src="/portfolio/profile-photo.png" alt="Foto van Tim Vanberghen">
         </div>
         <p>Hallo! Mijn naam is Tim Vanberghen. Ik ben een student met een passie voor technologie en innovatie. Hier vind je meer over mijn professionele en persoonlijke interesses.</p>
     </section>
