--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             text-align: center;
             margin-bottom: 20px;
         }
-        .photo-container pmg {
+        .photo-container img {
             width: 150px;
             height: 150px;
             border-radius: 50%;
@@ -95,7 +95,7 @@
     <section id="about">
         <h2>Over Mij</h2>
         <div class="photo-container">
-            <img src="/portfolio/profile-photo.png" alt="Foto van Tim Vanberghen">
+            <img src="/profile-photo.png" alt="Foto van Tim Vanberghen">
         </div>
         <p>Hallo! Mijn naam is Tim Vanberghen. Ik ben een student met een passie voor technologie en innovatie. Hier vind je meer over mijn professionele en persoonlijke interesses.</p>
     </section>
