--- a/index.html
+++ b/index.html
@@ -94,7 +94,19 @@
 
     <section id="about">
         <h2>Over Mij</h2>
+        <div class="photo-container">
+            <img src="profile-photo.png" alt="Foto van Tim Vanberghen">
+        </div>
         <p>Hallo! Mijn naam is Tim Vanberghen. Ik ben een student met een passie voor technologie en innovatie. Hier vind je meer over mijn professionele en persoonlijke interesses.</p>
+        <ul>
+            <li><strong>Voornaam en naam:</strong> Tim Vanberghen</li>
+            <li><strong>Geboortedatum:</strong> 22 mei 1990</li>
+            <li><strong>Verblijfplaats:</strong> Geel, België</li>
+            <li><strong>Telefoonnummer:</strong> +32 494 58 68 76</li>
+            <li><strong>E-mailadres:</strong> <a href="mailto:timvanberghen@hotmail.com">timvanberghen@hotmail.com</a></li>
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/tim-vanberghen-409002226/" target="_blank">Mijn LinkedIn</a></li>
+            <li><strong>CV:</strong> <a href="CV.pdf" target="_blank">Download mijn CV</a></li>
+        </ul>
     </section>
 
     <section id="skills">
@@ -121,9 +133,9 @@
         <h2>Contact</h2>
         <p>Wil je met mij in contact komen? Hier zijn mijn gegevens:</p>
         <ul>
-            <li>Email: <a href="mailto:timvanberghen@hotmail.com">jouwemail@example.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/jouwprofiel" target="_blank">Mijn LinkedIn</a></li>
-            <li>GitHub: <a href="https://github.com/jouwgithub" target="_blank">Mijn GitHub</a></li>
+            <li>Email: <a href="mailto:timvanberghen@hotmail.com">timvanberghen@hotmail.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/tim-vanberghen-409002226/" target="_blank">Mijn LinkedIn</a></li>
+            <li>GitHub: <a href="https://github.com/r0345938" target="_blank">Mijn GitHub</a></li>
         </ul>
     </section>
 
