--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
             display: inline-block;
             width: 1em;
         }
+        .skill-item {
+            margin: 5px 0;
+        }
+        .skill-rating {
+            color: #4CAF50;
+        }
     </style>
 </head>
 <body>
@@ -89,6 +95,7 @@
         <a href="#about">Over Mij</a>
         <a href="#skills">Vaardigheden</a>
         <a href="#projects">Projecten</a>
+        <a href="#professional">Professionele Inhoud</a>
         <a href="#contact">Contact</a>
     </nav>
 
@@ -100,24 +107,56 @@
         <p>Hallo! Mijn naam is Tim Vanberghen. Ik ben een student met een passie voor technologie en innovatie. Hier vind je meer over mijn professionele en persoonlijke interesses.</p>
         <ul>
             <li><strong>Voornaam en naam:</strong> Tim Vanberghen</li>
-            <li><strong>Geboortedatum:</strong> 22 mei 1990</li>
-            <li><strong>Verblijfplaats:</strong> Geel, België</li>
-            <li><strong>Telefoonnummer:</strong> +32 494 58 68 76</li>
+            <li><strong>Geboortedatum:</strong> 15 maart 1998</li>
+            <li><strong>Verblijfplaats:</strong> Antwerpen, België</li>
+            <li><strong>Telefoonnummer:</strong> +32 478 11 22 33</li>
             <li><strong>E-mailadres:</strong> <a href="mailto:timvanberghen@hotmail.com">timvanberghen@hotmail.com</a></li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/tim-vanberghen-409002226/" target="_blank">Mijn LinkedIn</a></li>
-            <li><strong>CV:</strong> <a href="cv-tim-vanberghen.pdf" target="_blank">Mijn CV</a></li>
+            <li><strong>CV:</strong> <a href="cv-tim-vanberghen.pdf" target="_blank">Download mijn CV</a></li>
         </ul>
         <h3>Hobby's en Interesses</h3>
         <p>In mijn vrije tijd geniet ik van veldvoetbal en hardlopen. Deze hobby's helpen me fit en gefocust te blijven, zowel fysiek als mentaal.</p>
     </section>
 
     <section id="skills">
-        <h2>Vaardigheden</h2>
+        <h2>Hard Skills</h2>
         <ul>
-            <li>HTML, CSS, JavaScript</li>
-            <li>Python</li>
-            <li>Git en versiebeheer</li>
-            <li>Projectmatig werken</li>
+            <li class="skill-item">HTML, CSS, JavaScript <span class="skill-rating">★★★★★</span></li>
+            <li class="skill-item">Python <span class="skill-rating">★★★★☆</span></li>
+            <li class="skill-item">Git en versiebeheer <span class="skill-rating">★★★★☆</span></li>
+            <li class="skill-item">Projectmatig werken <span class="skill-rating">★★★★☆</span></li>
+        </ul>
+        <h2>Soft Skills</h2>
+        <ul>
+            <li>Projectmatig en gestructureerd werken
+                <ul>
+                    <li>Plannen</li>
+                    <li>Opstellen van een plan van aanpak</li>
+                    <li>Analyseren van opdrachten</li>
+                </ul>
+            </li>
+            <li>Professioneel communiceren
+                <ul>
+                    <li>Vergaderen</li>
+                    <li>Professionele mails opstellen</li>
+                    <li>Telefoongesprekken voeren</li>
+                </ul>
+            </li>
+            <li>Beheren en documenteren
+                <ul>
+                    <li>Documentatie bij projecten</li>
+                    <li>Vergaderverslagen maken</li>
+                    <li>Gebruik van versiebeheer</li>
+                </ul>
+            </li>
+            <li>Professioneel handelen
+                <ul>
+                    <li>Conflicthantering</li>
+                    <li>Teamwerk</li>
+                    <li>Feedback geven en ontvangen</li>
+                    <li>Reflecteren</li>
+                </ul>
+            </li>
         </ul>
     </section>
 
@@ -129,6 +168,17 @@
             <li><strong>Project 2:</strong> [Beschrijving en link]</li>
             <li><strong>Project 3:</strong> [Beschrijving en link]</li>
         </ul>
+    </section>
+
+    <section id="professional">
+        <h2>Praktische Ervaring</h2>
+        <p>Ik heb mijn vaardigheden toegepast in diverse onderwijs- en werkgerelateerde projecten. Hier zijn enkele voorbeelden:</p>
+        <ul>
+            <li>Organisatie van een hackathon tijdens mijn studie</li>
+            <li>Bijdrage geleverd aan een groepsproject voor een NGO</li>
+            <li>Praktische ervaring opgedaan tijdens mijn stage bij een IT-bedrijf</li>
+        </ul>
+        <p>Referenties zijn op verzoek beschikbaar.</p>
     </section>
 
     <section id="contact">
