--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
             width: 1em;
         }
         .skill-item {
-            margin: 5px 0;
+            display: flex;
+            justify-content: space-between;
+            padding: 5px 0;
         }
         .skill-rating {
+            font-weight: bold;
             color: #4CAF50;
+            font-family: monospace;
         }
     </style>
 </head>
@@ -121,42 +125,21 @@
     <section id="skills">
         <h2>Hard Skills</h2>
         <ul>
-            <li class="skill-item">HTML, CSS, JavaScript <span class="skill-rating">★★★★★</span></li>
-            <li class="skill-item">Python <span class="skill-rating">★★★★☆</span></li>
-            <li class="skill-item">Git en versiebeheer <span class="skill-rating">★★★★☆</span></li>
-            <li class="skill-item">Projectmatig werken <span class="skill-rating">★★★★☆</span></li>
+            <li class="skill-item"><span>IOT</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>CCNA</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Linux</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Windows</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Windows server (soho)</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Python</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Docker</span> <span class="skill-rating">★★★☆☆</span></li>
         </ul>
         <h2>Soft Skills</h2>
         <ul>
-            <li>Projectmatig en gestructureerd werken
-                <ul>
-                    <li>Plannen</li>
-                    <li>Opstellen van een plan van aanpak</li>
-                    <li>Analyseren van opdrachten</li>
-                </ul>
-            </li>
-            <li>Professioneel communiceren
-                <ul>
-                    <li>Vergaderen</li>
-                    <li>Professionele mails opstellen</li>
-                    <li>Telefoongesprekken voeren</li>
-                </ul>
-            </li>
-            <li>Beheren en documenteren
-                <ul>
-                    <li>Documentatie bij projecten</li>
-                    <li>Vergaderverslagen maken</li>
-                    <li>Gebruik van versiebeheer</li>
-                </ul>
-            </li>
-            <li>Professioneel handelen
-                <ul>
-                    <li>Conflicthantering</li>
-                    <li>Teamwerk</li>
-                    <li>Feedback geven en ontvangen</li>
-                    <li>Reflecteren</li>
-                </ul>
-            </li>
+            <li>Leiding geven <span class="skill-rating">★★★★☆</span></li>
+            <li>Verantwoordelijkheid <span class="skill-rating">★★★★★</span></li>
+            <li>Administratief werk <span class="skill-rating">★★★★☆</span></li>
+            <li>Mensen motiveren <span class="skill-rating">★★★★★</span></li>
+            <li>Professioneel handelen <span class="skill-rating">★★★★☆</span></li>
         </ul>
     </section>
 
