--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
     <section id="skills">
         <h2>Hard Skills</h2>
         <ul>
-            <li class="skill-item"><span>IOT</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li class="skill-item"><span>CCNA</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li class="skill-item"><span>Linux</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li class="skill-item"><span>Windows</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li class="skill-item"><span>Windows server (soho)</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li class="skill-item"><span>Python</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li class="skill-item"><span>Docker</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li>IOT</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li>CCNA</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li>Linux</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li>Windows</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li>Windows server (soho)</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li>Python</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li>Docker</span> <span class="skill-rating">★★★☆☆</span></li>
         </ul>
         <h2>Soft Skills</h2>
         <ul>
