--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
     <section id="skills">
         <h2>Hard Skills</h2>
         <ul>
-            <li>IOT</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li>CCNA</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li>Linux</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li>Windows</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li>Windows server (soho)</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li>Python</span> <span class="skill-rating">★★★☆☆</span></li>
-            <li>Docker</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>IOT</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>CCNA</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Linux</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Windows</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Windows server (soho)</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Python</span> <span class="skill-rating">★★★☆☆</span></li>
+            <li class="skill-item"><span>Docker</span> <span class="skill-rating">★★★☆☆</span></li>
         </ul>
         <h2>Soft Skills</h2>
         <ul>
@@ -143,23 +143,21 @@
         </ul>
     </section>
 
-    <section id="projects">
-        <h2>Projecten</h2>
-        <p>Hier zijn enkele projecten waaraan ik heb gewerkt:</p>
-        <ul>
-            <li><strong>Project 1:</strong> [Beschrijving en link]</li>
-            <li><strong>Project 2:</strong> [Beschrijving en link]</li>
-            <li><strong>Project 3:</strong> [Beschrijving en link]</li>
-        </ul>
-    </section>
-
     <section id="professional">
         <h2>Praktische Ervaring</h2>
         <p>Ik heb mijn vaardigheden toegepast in diverse onderwijs- en werkgerelateerde projecten. Hier zijn enkele voorbeelden:</p>
         <ul>
-            <li>Organisatie van een hackathon tijdens mijn studie</li>
-            <li>Bijdrage geleverd aan een groepsproject voor een NGO</li>
-            <li>Praktische ervaring opgedaan tijdens mijn stage bij een IT-bedrijf</li>
+            <li><strong>Service technieker</strong> (nov. 2022 - mei 2023, Roeselare, Aleris)<br>
+                Onderhoud en in bedrijf stellen van brandcentrales, alarmsystemen...</li>
+            <li><strong>Assistent-teamleader</strong> (jan. 2018 - nov. 2022, Oevel, Toro)<br>
+                Mensen aansturen (+12 personen), planning opmaken voor werknemers, transport van zendingen regelen, stock op orde houden en transacties in SAP beheren.</li>
+            <li><strong>Magazijnier</strong> (apr. 2012 - jan. 2018, Oevel, Toro)<br>
+                Orderpicking, receiving...</li>
+        </ul>
+        <h3>Stages</h3>
+        <ul>
+            <li><strong>Software developer/testing</strong> (okt. 2024 - dec. 2024, Genk, Brightest (Gumption))<br>
+                Tijdens mijn stage bij Brightest ontwikkelde ik een project waarin ik een embedded Linux-omgeving simuleerde met Docker. Ik implementeerde een sensor die data via MQTT naar een Mosquitto-broker stuurde, data opsloeg in een MySQL-database, en visualiseerde in Grafana. Door test-driven development (TDD) in Python te gebruiken, waarborgde ik de betrouwbaarheid en kwaliteit van de code.</li>
         </ul>
         <p>Referenties zijn op verzoek beschikbaar.</p>
     </section>
