--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
             <li>Mensen motiveren <span class="skill-rating">★★★★★</span></li>
             <li>Professioneel handelen <span class="skill-rating">★★★★☆</span></li>
         </ul>
+        <h3>Talenkennis</h3>
+        <ul>
+            <li class="skill-item"><span>Nederlands</span> <span class="skill-rating">★★★★★</span></li>
+            <li class="skill-item"><span>Engels</span> <span class="skill-rating">★★★★☆</span></li>
+            <li class="skill-item"><span>Frans</span> <span class="skill-rating">★★☆☆☆</span></li>
+        </ul>
     </section>
 
     <section id="professional">
