--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 <body>
     <header>
         <h1>Mijn Portfolio</h1>
-        <p>Welkom op mijn portfolio! Hier vind je meer over mijn vaardigheden, ervaringen en projecten.</p>
+        <p>Welkom op mijn portfolio! Hier vind je meer over mijn vaardigheden, werkervaringen,....</p>
     </header>
     
     <nav>
         <a href="#about">Over Mij</a>
-        <a href="#skills">Vaardigheden</a>
-        <a href="#professional">Professionele Inhoud</a>
+        <a href="#skills">Skills</a>
+        <a href="#professional">Praktische ervaring</a>
         <a href="#contact">Contact</a>
     </nav>
 
@@ -142,28 +142,40 @@
         </ul>
         <h3>Talenkennis</h3>
         <ul>
-            <li class="skill-item"><span>Nederlands</span> <span class="skill-rating">★★★★★</span></li>
-            <li class="skill-item"><span>Engels</span> <span class="skill-rating">★★★★☆</span></li>
-            <li class="skill-item"><span>Frans</span> <span class="skill-rating">★★☆☆☆</span></li>
+            <li>Nederlands</span> <span class="skill-rating">★★★★★</span></li>
+            <li>Engels</span> <span class="skill-rating">★★★★☆</span></li>
+            <li>Frans</span> <span class="skill-rating">★★☆☆☆</span></li>
         </ul>
     </section>
 
     <section id="professional">
         <h2>Praktische Ervaring</h2>
-        <p>Ik heb mijn vaardigheden toegepast in diverse onderwijs- en werkgerelateerde projecten. Hier zijn enkele voorbeelden:</p>
-        <ul>
-            <li><strong>Service technieker</strong> (nov. 2022 - mei 2023, Roeselare, Aleris)<br>
-                Onderhoud en in bedrijf stellen van brandcentrales, alarmsystemen...</li>
-            <li><strong>Assistent-teamleader</strong> (jan. 2018 - nov. 2022, Oevel, Toro)<br>
-                Mensen aansturen (+12 personen), planning opmaken voor werknemers, transport van zendingen regelen, stock op orde houden en transacties in SAP beheren.</li>
-            <li><strong>Magazijnier</strong> (apr. 2012 - jan. 2018, Oevel, Toro)<br>
-                Orderpicking, receiving...</li>
-        </ul>
-        <h3>Stages</h3>
-        <ul>
-            <li><strong>Software developer/testing</strong> (okt. 2024 - dec. 2024, Genk, Brightest (Gumption))<br>
-                Tijdens mijn stage bij Brightest ontwikkelde ik een project waarin ik een embedded Linux-omgeving simuleerde met Docker. Ik implementeerde een sensor die data via MQTT naar een Mosquitto-broker stuurde, data opsloeg in een MySQL-database, en visualiseerde in Grafana. Door test-driven development (TDD) in Python te gebruiken, waarborgde ik de betrouwbaarheid en kwaliteit van de code.</li>
-        </ul>
+        <div class="experience">
+            <h3>Werkervaring</h3>
+            <ul>
+                <li><strong>Service technieker</strong><br>
+                    <em>nov. 2022 - mei 2023 | Roeselare, Aleris</em><br>
+                    Onderhoud en in bedrijf stellen van brandcentrales, alarmsystemen.
+                </li>
+                <li><strong>Assistent-teamleader</strong><br>
+                    <em>jan. 2018 - nov. 2022 | Oevel, Toro</em><br>
+                    Aansturen van medewerkers (+12 personen), planningen opstellen, transport organiseren, voorraadbeheer en SAP-gebruik.
+                </li>
+                <li><strong>Magazijnier</strong><br>
+                    <em>apr. 2012 - jan. 2018 | Oevel, Toro</em><br>
+                    Orderpicking, ontvangst en logistieke verwerking van goederen.
+                </li>
+            </ul>
+        </div>
+        <div class="experience">
+            <h3>Stages</h3>
+            <ul>
+                <li><strong>Software developer/testing</strong><br>
+                    <em>okt. 2024 - dec. 2024 | Genk, Brightest (Gumption)</em><br>
+                    Ontwikkeling van een embedded Linux-omgeving met Docker. Sensoren implementeerden data via MQTT naar een Mosquitto-broker, opgeslagen in een MySQL-database en gevisualiseerd met Grafana. Test-driven development (TDD) werd toegepast voor codekwaliteit.
+                </li>
+            </ul>
+        </div>
         <p>Referenties zijn op verzoek beschikbaar.</p>
     </section>
 
