--- a/index.html
+++ b/index.html
@@ -153,26 +153,26 @@
         <div class="experience">
             <h3>Werkervaring</h3>
             <ul>
-                <li><strong>Service technieker</strong><br>
-                    <em>nov. 2022 - mei 2023 | Roeselare, Aleris</em><br>
-                    Onderhoud en in bedrijf stellen van brandcentrales, alarmsystemen.
+                <li>
+                    <span class="job-title">Service technieker</span> | <span class="job-location">nov. 2022 - mei 2023 | Roeselare, Aleris</span>
+                    <p class="job-description">Onderhoud en in bedrijf stellen van brandcentrales, alarmsystemen.</p>
                 </li>
-                <li><strong>Assistent-teamleader</strong><br>
-                    <em>jan. 2018 - nov. 2022 | Oevel, Toro</em><br>
-                    Aansturen van medewerkers (+12 personen), planningen opstellen, transport organiseren, voorraadbeheer en SAP-gebruik.
+                <li>
+                    <span class="job-title">Assistent-teamleader</span> | <span class="job-location">jan. 2018 - nov. 2022 | Oevel, Toro</span>
+                    <p class="job-description">Aansturen van medewerkers (+12 personen), planningen opstellen, transport organiseren, voorraadbeheer en SAP-gebruik.</p>
                 </li>
-                <li><strong>Magazijnier</strong><br>
-                    <em>apr. 2012 - jan. 2018 | Oevel, Toro</em><br>
-                    Orderpicking, ontvangst en logistieke verwerking van goederen.
+                <li>
+                    <span class="job-title">Magazijnier</span> | <span class="job-location">apr. 2012 - jan. 2018 | Oevel, Toro</span>
+                    <p class="job-description">Orderpicking, ontvangst en logistieke verwerking van goederen.</p>
                 </li>
             </ul>
         </div>
         <div class="experience">
             <h3>Stages</h3>
             <ul>
-                <li><strong>Software developer/testing</strong><br>
-                    <em>okt. 2024 - dec. 2024 | Genk, Brightest (Gumption)</em><br>
-                    Ontwikkeling van een embedded Linux-omgeving met Docker. Sensoren implementeerden data via MQTT naar een Mosquitto-broker, opgeslagen in een MySQL-database en gevisualiseerd met Grafana. Test-driven development (TDD) werd toegepast voor codekwaliteit.
+                <li>
+                    <span class="job-title">Software developer/testing</span> | <span class="job-location">okt. 2024 - dec. 2024 | Genk, Brightest (Gumption)</span>
+                    <p class="job-description">Ontwikkeling van een embedded Linux-omgeving met Docker. Sensoren implementeerden data via MQTT naar een Mosquitto-broker, opgeslagen in een MySQL-database en gevisualiseerd met Grafana. Test-driven development (TDD) werd toegepast voor codekwaliteit.</p>
                 </li>
             </ul>
         </div>
