--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         <p>Hallo! Mijn naam is Tim Vanberghen. Ik ben een student met een passie voor technologie en innovatie. Hier vind je meer over mijn professionele en persoonlijke interesses.</p>
         <ul>
             <li><strong>Voornaam en naam:</strong> Tim Vanberghen</li>
-            <li><strong>Geboortedatum:</strong> 15 maart 1998</li>
-            <li><strong>Verblijfplaats:</strong> Antwerpen, België</li>
-            <li><strong>Telefoonnummer:</strong> +32 478 11 22 33</li>
+            <li><strong>Geboortedatum:</strong> 22 mei 1990</li>
+            <li><strong>Verblijfplaats:</strong> Geel, België</li>
+            <li><strong>Telefoonnummer:</strong> +32 494 58 68 76</li>
             <li><strong>E-mailadres:</strong> <a href="mailto:timvanberghen@hotmail.com">timvanberghen@hotmail.com</a></li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/tim-vanberghen-409002226/" target="_blank">Mijn LinkedIn</a></li>
             <li><strong>CV:</strong> <a href="cv-tim-vanberghen.pdf" target="_blank">Download mijn CV</a></li>
