--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <li><strong>Telefoonnummer:</strong> +32 494 58 68 76</li>
             <li><strong>E-mailadres:</strong> <a href="mailto:timvanberghen@hotmail.com">timvanberghen@hotmail.com</a></li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/tim-vanberghen-409002226/" target="_blank">Mijn LinkedIn</a></li>
-            <li><strong>CV:</strong> <a href="cv-tim-vanberghen.pdf" target="_blank">Download mijn CV</a></li>
+            <li><strong>CV:</strong> <a href="CV.pdf" target="_blank">Download mijn CV</a></li>
         </ul>
         <h3>Hobby's en Interesses</h3>
         <p>In mijn vrije tijd geniet ik van veldvoetbal en hardlopen. Deze hobby's helpen me fit en gefocust te blijven, zowel fysiek als mentaal.</p>
